manifests/base/checkout/istio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: checkoutservice
  namespace: checkoutservice
spec:
  workloadSelector:
    labels:
      app: checkoutservice
  egress:
    - hosts:
        - "istio-system/*"
        - "productcatalogservice/*"
        - "currencyservice/*"
        - "emailservice/*"
        - "paymentservice/*"
        - "shippingservice/*"
        - "cartservice/*"
