manifests/base/checkout/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: checkoutservice
  namespace: checkoutservice
spec:
  selector:
    matchLabels:
      app: checkoutservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/frontend/sa/frontend"]
